--- a/FirstLaba/FirstLaba.vcxproj.filters
+++ b/FirstLaba/FirstLaba.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="WorkWithFiles.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Testing.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="WorkWithFiles.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Testing.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
